# arvak

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  REVIEW_REPORT.md  SOURCES.md  WORKSPACE.md  audit.toml  deny.toml  docker-compose.yml  rust-toolchain.toml
adapters/arvak-adapter-braket/: Cargo.toml
adapters/arvak-adapter-braket/src/: api.rs  backend.rs  device.rs  error.rs  lib.rs
adapters/arvak-adapter-ddsim/: Cargo.toml
adapters/arvak-adapter-ddsim/src/: backend.rs  error.rs  lib.rs
adapters/arvak-adapter-ibm/: Cargo.toml
adapters/arvak-adapter-ibm/src/: api.rs  backend.rs  error.rs  lib.rs
adapters/arvak-adapter-ionq/: Cargo.toml
adapters/arvak-adapter-ionq/src/: api.rs  backend.rs  error.rs  lib.rs
adapters/arvak-adapter-iqm/: Cargo.toml
adapters/arvak-adapter-iqm/src/: api.rs  backend.rs  error.rs  lib.rs
adapters/arvak-adapter-qdmi/: Cargo.toml  README.md
adapters/arvak-adapter-qdmi/src/: backend.rs  error.rs  ffi.rs  lib.rs
adapters/arvak-adapter-quandela/: Cargo.toml  perceval_bridge.py
adapters/arvak-adapter-quandela/src/: api.rs  backend.rs  decoherence.rs  error.rs  lib.rs
adapters/arvak-adapter-quandela/tests/: test_quandela_sim.rs
adapters/arvak-adapter-quantinuum/: Cargo.toml
adapters/arvak-adapter-quantinuum/src/: api.rs  backend.rs  error.rs  lib.rs
adapters/arvak-adapter-scaleway/: Cargo.toml
adapters/arvak-adapter-scaleway/src/: api.rs  backend.rs  error.rs  lib.rs
adapters/arvak-adapter-sim/: Cargo.toml
adapters/arvak-adapter-sim/src/: lib.rs  simulator.rs  statevector.rs
adapters/hiq-adapter-iqm/: Cargo.toml
adapters/hiq-adapter-iqm/src/: backend.rs  lib.rs
adapters/hiq-adapter-qdmi/: Cargo.toml
adapters/hiq-adapter-qdmi/src/: ffi.rs
adapters/hiq-adapter-sim/: Cargo.toml
adapters/hiq-adapter-sim/src/: lib.rs  simulator.rs
arvak-bquant/: pyproject.toml
arvak-bquant/src/arvak_bquant/: __init__.py  client.py  exceptions.py  portfolio.py  qaoa.py  qubo.py  result.py  types.py
arvak-bquant/tests/: test_client.py  test_portfolio.py  test_qaoa.py  test_qubo.py  test_result.py
crates/arvak-bench/: Cargo.toml
crates/arvak-bench/src/: clops.rs  lib.rs  qv.rs  rb.rs
crates/arvak-cli/: Cargo.toml
crates/arvak-cli/src/: main.rs
crates/arvak-cli/tests/: cli_tests.rs
crates/arvak-compile/: Cargo.toml
crates/arvak-compile/src/: error.rs  lib.rs  manager.rs  pass.rs  property.rs  unitary.rs
crates/arvak-compile/tests/: measurement_safety.rs  pipeline_invariants.rs  proptest_pipeline.rs  sabre_termination.rs  unitary_equivalence.rs
crates/arvak-dashboard/: Cargo.toml
crates/arvak-dashboard/src/: dto.rs  error.rs  lib.rs  main.rs  processor.rs  server.rs  state.rs
crates/arvak-dashboard/static/: app.js  index.html  style.css
crates/arvak-dashboard/tests/: api_tests.rs
crates/arvak-eval/: Cargo.toml  README.md
crates/arvak-eval/src/: benchmark.rs  contract.rs  emitter.rs  error.rs  export.rs  input.rs  lib.rs  metrics.rs  observer.rs  orchestration.rs  report.rs  reproducibility.rs  scheduler_context.rs
crates/arvak-grpc/: .env.example  Cargo.toml  MIDDLEWARE.md  MONITORING.md  PHASE5_PLAN.md  README.md  ROADMAP.md  STREAMING.md  build.rs  config.example.yaml  docker-compose.monitoring.yml  prometheus.yml
crates/arvak-grpc/dashboards/: arvak-grpc.json
crates/arvak-grpc/examples/: config_example.rs  custom_storage.rs  health_metrics.rs  simple_client.rs  streaming_demo.rs
crates/arvak-grpc/proto/: arvak.proto
crates/arvak-grpc/src/: config.rs  error.rs  health.rs  lib.rs  metrics.rs  proto.rs  resource_manager.rs  tracing_config.rs
crates/arvak-grpc/tests/: integration_test.rs  strict_backend.rs
crates/arvak-hal/: Cargo.toml
crates/arvak-hal/src/: auth.rs  backend.rs  capability.rs  error.rs  job.rs  lib.rs  plugin.rs  registry.rs  result.rs
crates/arvak-proj/: Cargo.toml  FOLD.md
crates/arvak-proj/src/: accuracy.rs  bench.rs  bianchi.rs  channel.rs  finite_difference_jacobian.rs  frequency.rs  kicked_ising.rs  lib.rs  mps.rs  partition.rs  reassembly.rs  shootout.rs  validation.rs
crates/arvak-proj/tests/: kim_validation.rs  test_fold_integration.rs
crates/arvak-python/: CIRQ_IMPLEMENTATION.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_STATUS.md  QRISP_IMPLEMENTATION.md  QUICKSTART_INTEGRATIONS.md  README.md  pyproject.toml  verify_integration_system.py
crates/arvak-python/benchmarks/: bench_chemistry_hamiltonians.py
crates/arvak-python/notebooks/: .gitignore  01_core_arvak.ipynb  02_qiskit_integration.ipynb  03_qrisp_integration.ipynb  04_cirq_integration.ipynb  05_pennylane_integration.ipynb  06_computational_chemistry.ipynb  07_nathan_research_optimizer.ipynb  IMPLEMENTATION_SUMMARY.md  README.md  generate_notebook.py  lih_vqe_optimized.qasm
crates/arvak-python/src/: backend.rs  circuit.rs  compile.rs  error.rs  lib.rs  projection.rs  qasm.rs  qubits.rs  sim.rs  simulate.rs
crates/arvak-python/tests/: test_circuit.py  test_compile.py  test_differential_qiskit.py  test_doc_snippets.py  test_nathan_anonymize.py  test_nathan_clifford.py  test_nathan_p1p2.py  test_nathan_verify.py  test_optimize.py  test_optimize_backend.py  test_optimize_problems.py  test_optimize_qaoa.py  test_optimize_vqe.py  test_predictor.py  test_run_sim.py  test_sim_bindings.py
crates/arvak-qasm3/: Cargo.toml
crates/arvak-qasm3/src/: ast.rs  emitter.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/arvak-qasm3/tests/: proptest_roundtrip.rs
crates/arvak-qdmi/: Cargo.toml  build.rs
crates/arvak-qdmi-device/: Cargo.toml
crates/arvak-qdmi-device/src/: job.rs  lib.rs  session.rs  state.rs
crates/arvak-sched/: Cargo.toml
demos/: .mcp.json  Cargo.toml  README.md  alsvid_quandela_demo.py  aqt_test.py  ionq_test.py  iqm_resonance_test.py  qoblib_benchmark.py  qoblib_ibm_qaoa.py  quantinuum_test.py  scaleway_test.py
demos/data/: vqe_result.json
demos/lumi-hybrid/: Cargo.toml  README.md
demos/src/: lib.rs
demos/tests/: integration_tests.rs
(+449 files in other folders)
