[workspace]
resolver = "2"
members = [
    "crates/*",
    "adapters/*",
    "demos",
    "demos/lumi-hybrid",
]

[workspace.package]
version = "1.7.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/hiq-lab/arvak"
keywords = ["quantum", "hpc", "compiler", "qasm", "orchestration"]
categories = ["science", "compilers", "simulation"]

[workspace.dependencies]
# Internal crates
arvak-ir = { path = "crates/arvak-ir" }
arvak-qasm3 = { path = "crates/arvak-qasm3" }
arvak-compile = { path = "crates/arvak-compile" }
arvak-hal = { path = "crates/arvak-hal" }
arvak-sched = { path = "crates/arvak-sched" }
arvak-types = { path = "crates/arvak-types" }
arvak-auto = { path = "crates/arvak-auto" }
arvak-dashboard = { path = "crates/arvak-dashboard" }
arvak-bench = { path = "crates/arvak-bench" }
arvak-eval = { path = "crates/arvak-eval" }

# Adapter crates
arvak-adapter-sim = { path = "adapters/arvak-adapter-sim" }

# Async runtime — minimal workspace features; crates add extras as needed.
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# Graph algorithms
petgraph = "0.7"

# Numeric
num-complex = { version = "0.4", features = ["serde"] }
ndarray = "0.16"

# Parsing
logos = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Hashing
rustc-hash = "2.1"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directories
dirs = "5.0"

# Dynamic loading
libloading = "0.8"

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Random
rand = "0.8"

# Testing
proptest = "1.5"
criterion = "0.5"

# --- Dev profile: optimized for fast iteration ---
[profile.dev]
opt-level = 0
debug = "line-tables-only"    # ~30% faster incremental builds vs full debug
incremental = true

# Optimize dependencies even in dev mode (faster runtime during testing)
[profile.dev.package."*"]
opt-level = 2

# --- Release profile: optimized for maximum runtime performance ---
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"               # smaller binaries, no unwind overhead
strip = "symbols"             # smaller binaries for distribution

# --- Release with fat LTO (slower build, faster binary) ---
[profile.release-lto]
inherits = "release"
lto = "fat"                   # ~5-10% faster than thin, longer link

# --- Bench profile ---
[profile.bench]
lto = "thin"
debug = 2                     # full debug info for profiling
