[package]
name = "arvak-demos"
version.workspace = true
edition.workspace = true
description = "Demo suite for Arvak HPC-quantum orchestration"

[dependencies]
arvak-ir = { workspace = true }
arvak-compile = { workspace = true }
arvak-qasm3 = { workspace = true }
arvak-hal = { workspace = true }
arvak-sched = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Numeric
num-complex = { workspace = true }

# Random for parameter initialization
rand = { workspace = true }

[[bin]]
name = "demo-grover"
path = "bin/demo_grover.rs"

[[bin]]
name = "demo-vqe"
path = "bin/demo_vqe.rs"

[[bin]]
name = "demo-qaoa"
path = "bin/demo_qaoa.rs"

[[bin]]
name = "demo-multi"
path = "bin/demo_multi.rs"

[[bin]]
name = "demo-qi-nutshell"
path = "bin/demo_qi_nutshell.rs"

[[bin]]
name = "demo-all"
path = "bin/demo_all.rs"

[[bin]]
name = "demo-speed-vqe"
path = "bin/demo_speed_vqe.rs"

[[bin]]
name = "demo-speed-qml"
path = "bin/demo_speed_qml.rs"

[[bin]]
name = "demo-speed-qaoa"
path = "bin/demo_speed_qaoa.rs"
