[package]
name = "arvak-adapter-braket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AWS Braket backend adapter for Arvak"
keywords = ["quantum", "aws", "braket", "backend"]
categories = ["science", "api-bindings"]

[dependencies]
# Internal
arvak-ir.workspace = true
arvak-hal.workspace = true
arvak-qasm3.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "time"] }

# AWS SDK
aws-config.workspace = true
aws-sdk-braket.workspace = true
aws-sdk-s3.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# Utilities
uuid.workspace = true
tracing.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
