[package]
name = "arvak-adapter-ddsim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak backend adapter for MQT DDSIM (Decision Diagram Simulator)"
keywords = ["quantum", "simulator", "ddsim", "mqt"]
categories = ["science", "simulation"]

[dependencies]
arvak-ir = { workspace = true }
arvak-hal = { workspace = true }
arvak-qasm3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process"] }
rustc-hash = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
