[package]
name = "arvak-adapter-ibm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IBM Quantum backend adapter for HIQ"
keywords = ["quantum", "ibm", "qiskit", "backend"]
categories = ["science", "api-bindings"]

[dependencies]
# Internal
arvak-ir.workspace = true
arvak-hal.workspace = true
arvak-qasm3.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "time"] }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
