[package]
name = "arvak-adapter-ionq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak adapter for IonQ trapped-ion quantum computers and simulators"
keywords = ["quantum", "ionq", "ion-trap", "cloud", "hardware"]
categories = ["science", "api-bindings"]

[dependencies]
arvak-ir = { workspace = true }
arvak-hal = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
