[package]
name = "arvak-adapter-quandela"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak adapter for Quandela Altair photonic quantum computer"
keywords = ["quantum", "quandela", "photonic", "cloud", "hardware"]
categories = ["science", "api-bindings"]

[dependencies]
arvak-ir = { workspace = true }
arvak-hal = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
