[package]
name = "arvak-adapter-quantinuum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak adapter for Quantinuum H1/H2 ion-trap quantum computers"
keywords = ["quantum", "quantinuum", "ion-trap", "cloud", "hardware"]
categories = ["science", "api-bindings"]

[dependencies]
arvak-ir = { workspace = true }
arvak-hal = { workspace = true }
arvak-qasm3 = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
