[package]
name = "arvak-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standard quantum benchmark suite for Arvak (QV, CLOPS, RB)"

[dependencies]
arvak-ir.workspace = true
arvak-compile.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
