[package]
name = "arvak-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak command-line interface"
keywords = ["quantum", "cli", "compiler"]
categories = ["command-line-utilities"]

[[bin]]
name = "arvak"
path = "src/main.rs"

[dependencies]
arvak-ir = { workspace = true }
arvak-qasm3 = { path = "../arvak-qasm3" }
arvak-compile = { workspace = true }
arvak-hal = { workspace = true }
arvak-adapter-sim = { path = "../../adapters/arvak-adapter-sim" }
arvak-adapter-iqm = { path = "../../adapters/arvak-adapter-iqm", optional = true }
arvak-adapter-ibm = { path = "../../adapters/arvak-adapter-ibm", optional = true }
arvak-sched = { workspace = true }
arvak-eval = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
arvak-compile = { workspace = true }
arvak-qasm3 = { path = "../arvak-qasm3" }
tempfile = "3"

[features]
default = []
iqm = ["dep:arvak-adapter-iqm"]
ibm = ["dep:arvak-adapter-ibm"]
all-backends = ["iqm", "ibm"]
