[package]
name = "arvak-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arvak command-line interface"
keywords = ["quantum", "cli", "compiler"]
categories = ["command-line-utilities"]

[[bin]]
name = "arvak"
path = "src/main.rs"

[dependencies]
arvak-ir = { workspace = true }
arvak-qasm3 = { workspace = true }
arvak-compile = { workspace = true }
arvak-hal = { workspace = true }
arvak-adapter-sim = { workspace = true }
arvak-adapter-ddsim = { workspace = true, optional = true }
arvak-adapter-iqm = { workspace = true, optional = true }
arvak-adapter-ibm = { workspace = true, optional = true }
arvak-adapter-braket = { workspace = true, optional = true }
arvak-adapter-scaleway = { workspace = true, optional = true }
arvak-adapter-quantinuum = { workspace = true, optional = true }
arvak-adapter-aqt = { workspace = true, optional = true }
arvak-sched = { workspace = true }
arvak-eval = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
arvak-compile = { workspace = true }
arvak-qasm3 = { workspace = true }
tempfile = "3"

[features]
default = []
ddsim = ["dep:arvak-adapter-ddsim"]
iqm = ["dep:arvak-adapter-iqm"]
ibm = ["dep:arvak-adapter-ibm"]
braket = ["dep:arvak-adapter-braket"]
scaleway = ["dep:arvak-adapter-scaleway"]
quantinuum = ["dep:arvak-adapter-quantinuum"]
aqt = ["dep:arvak-adapter-aqt"]
all-backends = ["ddsim", "iqm", "ibm", "braket", "scaleway", "quantinuum", "aqt"]
