[package]
name = "arvak-compile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HIQ compilation and transpilation framework"
keywords = ["quantum", "compiler", "transpiler", "optimization"]
categories = ["science", "compilers"]

[dependencies]
arvak-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
