[package]
name = "arvak-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "gRPC service API for remote quantum circuit execution"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }

# Arvak core
arvak-hal = { workspace = true }
arvak-ir = { workspace = true }
arvak-qasm3 = { workspace = true }
arvak-types = { workspace = true }

# Arvak backends (feature-gated)
arvak-adapter-sim = { path = "../../adapters/arvak-adapter-sim", optional = true }

# Data structures
rustc-hash = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Time
chrono = { workspace = true, features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# HTTP server for health/metrics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1.0"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"

[features]
default = ["simulator"]
simulator = ["arvak-adapter-sim"]
# TODO: Add sqlite and postgres features once dependency conflicts are resolved

[[bin]]
name = "arvak-grpc-server"
path = "src/bin/arvak-grpc-server.rs"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "custom_storage"
path = "examples/custom_storage.rs"

[[example]]
name = "health_metrics"
path = "examples/health_metrics.rs"

[[example]]
name = "streaming_demo"
path = "examples/streaming_demo.rs"
