[package]
name = "arvak-hal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HIQ Hardware Abstraction Layer"
keywords = ["quantum", "backend", "hardware", "abstraction"]
categories = ["science", "hardware-support"]

[dependencies]
arvak-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
