[package]
name = "arvak-proj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Projector simulator: commensurability-guided MPS with adaptive bond truncation"
keywords = ["quantum", "tensor-network", "mps", "simulation", "projector"]
categories = ["science", "simulation"]

[dependencies]
arvak-ir = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rayon = "1.10"
faer = "0.24"
nalgebra = "0.33"
