[package]
name = "arvak-proj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Projector simulator: commensurability-guided MPS with adaptive bond truncation"
keywords = ["quantum", "tensor-network", "mps", "simulation", "projector"]
categories = ["science", "simulation"]

[features]
default = []
# Apply Bianchi-projection truncation correction after each SVD.
# Enables the projection step in `Mps::apply_two_qubit` when sin(C/2) data
# is set on the MPS. Disabled = zero overhead.
bianchi = []

[dependencies]
arvak-ir = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rayon = "1.10"
faer = "0.24"
