[package]
name = "arvak-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for the Arvak quantum compilation platform"

[lib]
name = "arvak"
crate-type = ["cdylib"]

[features]
default = ["simulator"]
simulator = ["arvak-adapter-sim"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
arvak-ir = { workspace = true }
arvak-compile = { workspace = true }
arvak-qasm3 = { workspace = true }
arvak-hal = { workspace = true }
arvak-adapter-sim = { workspace = true, optional = true }
arvak-sim = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
