[package]
name = "arvak-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for the Arvak quantum compilation platform"

[lib]
name = "arvak"
crate-type = ["cdylib"]

[features]
default = ["simulator", "adapter-iqm", "adapter-scaleway", "adapter-ibm", "adapter-quantinuum", "adapter-aqt", "adapter-ionq", "adapter-quandela", "adapter-braket", "adapter-cudaq", "adapter-ddsim"]
simulator = ["arvak-adapter-sim"]
adapter-iqm = ["arvak-adapter-iqm"]
adapter-scaleway = ["arvak-adapter-scaleway"]
adapter-ibm = ["arvak-adapter-ibm"]
adapter-quantinuum = ["arvak-adapter-quantinuum"]
adapter-aqt = ["arvak-adapter-aqt"]
adapter-ionq = ["arvak-adapter-ionq"]
adapter-quandela = ["arvak-adapter-quandela"]
adapter-braket = ["arvak-adapter-braket"]
adapter-cudaq = ["arvak-adapter-cudaq"]
adapter-ddsim = ["arvak-adapter-ddsim"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
arvak-ir = { workspace = true }
arvak-compile = { workspace = true }
arvak-qasm3 = { workspace = true }
arvak-hal = { workspace = true }
arvak-adapter-sim = { workspace = true, optional = true }
arvak-adapter-iqm = { path = "../../adapters/arvak-adapter-iqm", optional = true }
arvak-adapter-scaleway = { path = "../../adapters/arvak-adapter-scaleway", optional = true }
arvak-adapter-ibm = { path = "../../adapters/arvak-adapter-ibm", optional = true }
arvak-adapter-quantinuum = { path = "../../adapters/arvak-adapter-quantinuum", optional = true }
arvak-adapter-aqt = { path = "../../adapters/arvak-adapter-aqt", optional = true }
arvak-adapter-ionq = { path = "../../adapters/arvak-adapter-ionq", optional = true }
arvak-adapter-quandela = { workspace = true, optional = true }
arvak-adapter-braket = { workspace = true, optional = true }
arvak-adapter-cudaq = { workspace = true, optional = true }
arvak-adapter-ddsim = { workspace = true, optional = true }
arvak-sim = { workspace = true }
arvak-proj = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
